[package]
name = "file-hashing"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["CryptoGladi <mymamchm@mail.ru>"]
publish = true
description = "Library for hashing files and folder"
repository = "https://github.com/CryptoGladi/file-hashing"
keywords = ["hash", "filesystem", "file", "folder"]
categories = ["algorithms", "filesystem"]
readme = "README.md"

[dependencies]
data-encoding = "2.3"
digest = "0.10"
rayon = "1.5"
walkdir = "2.3"
assert_fs = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = ["extra_fs"]
extra_fs = ["dep:assert_fs", "dep:rand"]

[dev-dependencies]
blake2 = "0.10.4"
criterion = { version = "0.4.0", features = ["html_reports"] }

[profile.release]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
